--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,7 +10,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 1rem;
+  justify-content: center;
+  padding: 1rem 1rem;
   height: 100%;
   min-height: 100vh;
   overflow: hidden;
@@ -22,12 +23,12 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  max-width: 40rem;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   padding: 2rem 1rem;
   border-radius: 16px;
-  margin-top: 8rem;
   row-gap: 2rem;
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.5);
@@ -61,13 +62,15 @@
 }
 .App button {
   display: flex;
-  height: 2rem;
+  align-items: center;
+  height: 3rem;
   border: 0;
   background-color: #0AC161;
   color: white;
   padding: 0.5rem 1rem;
   border-radius: 8px;
-  font-weight: 500;
+  font-weight: 600;
+  font-size: 1rem;
   cursor: pointer;
 }
 .App a {
