--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -10,7 +10,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0 1rem;
+  justify-content: center;
+  padding: 1rem 1rem;
   height: 100%;
   min-height: 100vh;
   overflow: hidden;
@@ -21,11 +22,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    // justify-content: center;
     width: 100%;
+    max-width: 40rem;
     height: fit-content;
     padding: 2rem 1rem;
     border-radius: 16px;
-    margin-top: 8rem;
+    // margin-top: 8rem;
     row-gap: 2rem;
     z-index: 1;
     // background-color: rgba(0, 0, 0, 0.3);
@@ -36,6 +39,7 @@
     .iframe-wrapper {
       position: relative;
       width: 100%;
+      // max-width: 40rem;
       border-radius: 16px;
       overflow: hidden;
 
@@ -66,13 +70,15 @@
 
   button {
     display: flex;
-    height: 2rem;
+    align-items: center;
+    height: 3rem;
     border: 0;
     background-color: #0AC161;
     color: white;
     padding: 0.5rem 1rem;
     border-radius: 8px;
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 1rem;
     cursor: pointer;
 
     // &:hover {
